@@ -73,6 +73,10 @@ today_fmt = '%%B %%d, %%Y'
 # List of documents that shouldn't be included in the build.
 #unused_docs = []
 
+# List of directories, relative to source directories, that shouldn't be searched
+# for source files.
+#exclude_dirs = []
+
 # If true, '()' will be appended to :func: etc. cross-reference text.
 #add_function_parentheses = True
 
